2008-06-15  Zoltan Varga  <vargaz@gmail.com>

	* gc.c (mono_gc_cleanup): Abort the finalizer thread more gracefully.
	Fixes #324180.

2008-06-14  Zoltan Varga  <vargaz@gmail.com>

	* appdomain.c (unload_thread_main): Applied patch from Tim Howard 
	(timh@ict.om.org). Remove the timeouts when waiting for appdomains to unload.

	* gc.c (mono_domain_finalize): Allow an infinite timeout.

	* threads.c (mono_threads_abort_appdomain_threads): Ditto.
	
	* threads.c (mono_thread_request_interruption): Get rid of locking, use
	InterlockedCompareExchange to query and modify 
	thread->interruption_requested.

	* object-internals.h (struct _MonoThread): Change interruption_requested
	to a gint32 so it can be modified by atomic operations. Add 
	'critical_region_level' from the managed side, change small_id to a guint32,
	add new set of 'unused' fields.

	* appdomain.c: Bump corlib version.

2008-06-13  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_from_name): Search modules as well. Fixes
	#322332.

2008-06-13  Mark Probst  <mark.probst@gmail.com>

	* generic-sharing.c: Code for maintaining the MRGCTX and MRGCTX
	templates.  Templates are generalized with an additional type_argc
	argument.  RGCTX templates have type_argc==0, MRGCTX templates
	have type_argc>0.

	* domain-internals.h, domain.c: New hash table for looking up
	MRGCTXs.

	* metadata.c, metadata-internals.h: Rename hash and equal
	functions for MonoGenericInst's and make them public.

	* class-internals.h: New data structures for the MRGCTX.  Macros
	for distinguishing slots in the RGCTX and the MRGCTX.

2008-06-13  Mark Probst  <mark.probst@gmail.com>

	* object.c (mono_method_get_imt_slot): Put the same methods of
	different instantiations of the same generic interface in the same
	IMT slots, to make generic sharing simpler.

2008-06-12 Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-internals.h: Added mono_metadata_field_info_with_mempool.
